--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "flow-line-renderer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A external renderer for ArcGIS JS API, used to show the flow effect of lines.",
+  "keywords": [
+    "renderer",
+    "line",
+    "arcgis"
+  ],
   "main": "dist/index.min.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
